requisito 9 - não me atentei ao alpine

--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,9 +1,27 @@
-FROM node:14
+#FROM node:14
+
+#WORKDIR /usr/src/app
+
+#COPY package*.json ./
+
+#ADD node_modules.tar.gz .
+
+#RUN npm install
+
+#COPY . .
+
+#EXPOSE 3001
+
+#CMD [ "npm", "start" ]
+
+FROM node:14-alpine
 
 EXPOSE 3001
 
-ADD node_modules.tar.gz .
+WORKDIR /user/todo-app/back-end
 
-COPY . ./docker/todo-app/back-end/Dockerfile
+ADD node_modules.tar.gz ./
 
-CMD [ "npm start" ]
+COPY . .
+
+CMD ["npm", "start"]
